k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec: #specifies how this service behaves
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379 #other pods/objects must use this port to connect to the redis server
      targetPort: 6379
